fix(homepage): Improved the top brands section to be scrollable on mobile devices and fixed the header and buy and sell sections

--- a/src/index.css
+++ b/src/index.css
@@ -2,50 +2,70 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face{
-  font-family: "black";
-  src:local("sf-ui-display-black"),
-  url('/src/assets/fonts/sf-ui-display-black.woff') format("woff");
+@font-face {
+	font-family: 'black';
+	src:
+		local('sf-ui-display-black'),
+		url('/src/assets/fonts/sf-ui-display-black.woff') format('woff');
 }
 
-@font-face{
-  font-family: "bold";
-  src:local("sf-ui-display-bold"),
-  url('/src/assets/fonts/sf-ui-display-bold.woff') format("woff");
+@font-face {
+	font-family: 'bold';
+	src:
+		local('sf-ui-display-bold'),
+		url('/src/assets/fonts/sf-ui-display-bold.woff') format('woff');
 }
 
-@font-face{
-  font-family: "heavy";
-  src:local("sf-ui-display-heavy"),
-  url('/src/assets/fonts/sf-ui-display-heavy.woff') format("woff");
+@font-face {
+	font-family: 'heavy';
+	src:
+		local('sf-ui-display-heavy'),
+		url('/src/assets/fonts/sf-ui-display-heavy.woff') format('woff');
 }
 
-@font-face{
-  font-family: "light";
-  src:local("sf-ui-display-light"),
-  url('/src/assets/fonts/sf-ui-display-light.woff') format("woff");
+@font-face {
+	font-family: 'light';
+	src:
+		local('sf-ui-display-light'),
+		url('/src/assets/fonts/sf-ui-display-light.woff') format('woff');
 }
 
-@font-face{
-  font-family: "medium";
-  src:local("sf-ui-display-medium"),
-  url('/src/assets/fonts/sf-ui-display-medium.woff') format("woff");
+@font-face {
+	font-family: 'medium';
+	src:
+		local('sf-ui-display-medium'),
+		url('/src/assets/fonts/sf-ui-display-medium.woff') format('woff');
 }
 
-@font-face{
-  font-family: "semibold";
-  src:local("sf-ui-display-semibold"),
-  url('/src/assets/fonts/sf-ui-display-semibold.woff') format("woff");
+@font-face {
+	font-family: 'semibold';
+	src:
+		local('sf-ui-display-semibold'),
+		url('/src/assets/fonts/sf-ui-display-semibold.woff') format('woff');
 }
 
-@font-face{
-  font-family: "thin";
-  src:local("sf-ui-display-thin"),
-  url('/src/assets/fonts/sf-ui-display-thin.woff') format("woff");
+@font-face {
+	font-family: 'thin';
+	src:
+		local('sf-ui-display-thin'),
+		url('/src/assets/fonts/sf-ui-display-thin.woff') format('woff');
 }
 
-@font-face{
-  font-family: "ultralight";
-  src:local("sf-ui-display-ultralight"),
-  url('/src/assets/fonts/sf-ui-display-ultralight.woff') format("woff");
+@font-face {
+	font-family: 'ultralight';
+	src:
+		local('sf-ui-display-ultralight'),
+		url('/src/assets/fonts/sf-ui-display-ultralight.woff') format('woff');
+}
+
+@layer utilities {
+	/* Hide scrollbar for Chrome, Safari and Opera */
+	.no-scrollbar::-webkit-scrollbar {
+		display: none;
+	}
+	/* Hide scrollbar for IE, Edge and Firefox */
+	.no-scrollbar {
+		-ms-overflow-style: none; /* IE and Edge */
+		scrollbar-width: none; /* Firefox */
+	}
 }
